src/test/ui/span/transitive-dep-span.stderr
error: expected one of `!` or `::`, found `error`
  --> $DIR/auxiliary/transitive_dep_three.rs:6:27
   |
LL | /         macro_rules! parse_error {
LL | |             () => { parse error }
   | |                           ^^^^^ expected one of `!` or `::`
LL | |         }
   | |_________- in this expansion of `transitive_dep_two::parse_error!`
   |
  ::: $DIR/transitive-dep-span.rs:13:1
   |
LL |   transitive_dep_two::parse_error!();
   |   ----------------------------------
   |   |
   |   in this macro invocation
   |   in this macro invocation

error: aborting due to previous error

